kubernetes/whoami/services.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - name: http
      port: 80

  selector:
    app: whoami
