kubernetes/whoami/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: local-only
spec:
  ipAllowList:
    sourceRange:
      - 127.0.0.1/32
      - 192.168.14.1/24
      - 192.168.14.1/32
      - 192.168.14.143
    ipStrategy:
      depth: 4

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: local-only@kubernetescrd

spec:
  rules:
  - host: "whoami.sugjo.dev"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami-service
            port:
              number: 80
  tls:
  - hosts:
    - whoami.sugjo.dev
    secretName: sugjodev
